--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<p id="version">1.0.0</p>
+<p id="version">1.0.1</p>
 
 
 
@@ -21,6 +21,7 @@
 
 	<script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
 	<script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.js"></script>
 	<script type="text/javascript" src="mychart.js"></script>
 </body>
 </html>
